Fixed incorrect table displaying on small devices (moved data to a modal) and introduced a modal allowing restaurant data modification

--- a/frontend-app/src/features/restaurant/RestaurantSearchPage.css
+++ b/frontend-app/src/features/restaurant/RestaurantSearchPage.css
@@ -1,5 +1,11 @@
+td > .ant-btn-link {
+  padding: 0;
+}
+
 .ant-popover ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .ant-popover li {
